rbx_binary/src/weak/tests/snapshots/rbx_binary__weak__tests__util__ref-child__decoded.snap
---
source: rbx_binary/src/weak/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: Value
  class: ObjectValue
  properties:
    Attributes:
      Attributes: {}
    Tags:
      Tags: []
    Value: referent-1
  children:
    - referent: referent-1
      name: Ref Target
      class: Folder
      properties:
        Attributes:
          Attributes: {}
        Tags:
          Tags: []
      children: []
