rbx_binary/src/weak/tests/snapshots/rbx_binary__weak__tests__util__ref-child__input.snap
---
source: rbx_binary/src/weak/tests/util.rs
expression: text_decoded
---
num_types: 2
num_instances: 2
chunks:
  - Meta:
      entries:
        - - ExplicitAutoJoints
          - "true"
  - Inst:
      type_id: 0
      type_name: Folder
      object_format: 0
      referents:
        - 1
  - Inst:
      type_id: 1
      type_name: ObjectValue
      object_format: 0
      referents:
        - 0
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - Ref Target
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
  - Prop:
      type_id: 1
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
  - Prop:
      type_id: 1
      prop_name: Name
      prop_type: String
      values:
        - Value
  - Prop:
      type_id: 1
      prop_name: Tags
      prop_type: String
      values:
        - ""
  - Prop:
      type_id: 1
      prop_name: Value
      prop_type: Ref
      values:
        - 1
  - Prnt:
      version: 0
      links:
        - - 1
          - 0
        - - 0
          - -1
  - End
